log
Thu Mar 17 21:54:40 HSP 2022: 
 list.c | 38 +++++++++++++++++++++++++++++++++++++-
 1 file changed, 37 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:78:15: error: unused variable 'new' [-Werror=unused-variable]
   78 |         Node *new=createNode(data);
      |               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
2562c18
Thu Mar 17 22:26:26 HSP 2022: 
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:78:15: error: unused variable 'new' [-Werror=unused-variable]
   78 |         Node *new=createNode(data);
      |               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
ee972e5
